# MultiRAG

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
config/: config.yaml
src/llm/: __init__.py  _base_llm.py  _llm_factory.py  _llm_setup.py  _prompts.py  _rag_llm.py  _simple_llm.py  _states.py  _user_rag_llm.py
src/models/: __init__.py  _admin.py  _association_tables.py  _base_sqlalchemy.py  _llm.py  _user.py
src/operations/: __init__.py  _admin.py  _association_operations.py  _chat_history.py  _db_setup.py  _document_hadling.py  _llm.py  _memory.py  _user.py  _vector_db.py
src/schema/: _admin.py  _llm.py  _user.py
src/utils/: __init__.py  config.py  logger.py
web/: app_api.py
web/exceptions/: _file.py
web/routers/: _admin.py  _file.py  _user.py
web/schema/: _admin.py  _file.py  _user.py
web/utils/: _file.py
